organized css files

--- a/WebApp/static/css/home.css
+++ b/WebApp/static/css/home.css
@@ -1,4 +1,80 @@
-#map {
-    width: 900px;
-    height: 500px;
+#title_class {
+    padding-top: 1.5rem;
+    width: 75%;
+    margin: auto;
+    font-size: 2.5rem;
+    font-family: Arial, serif;
+    text-shadow: black 0.1em 0.1em 0.2em;
+    color: white;
+}
+
+#tagline_class {
+    padding-top: 1.5rem;
+    width: 75%;
+    margin: auto;
+    font-size: 1.2rem;
+    font-family: Arial, serif;
+    text-shadow: black 0.1em 0.1em 0.2em;
+    color: white;
+}
+
+.vertical_center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.hero_style {
+    height: 50vh;
+    width: 100%;
+    object-fit: cover;
+}
+
+.flex_cards {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    box-shadow: black;
+}
+
+.app-card {
+    height: 300px;
+    width: 400px;
+}
+
+.fixed_card {
+    background: url("../images/cards/fixed.PNG");
+    background-size: cover;
+}
+
+.full_card {
+    background: url("../images/cards/full.PNG");
+    background-size: cover;
+}
+
+.gee_card {
+    background: url("../images/cards/gee.PNG");
+    background-size: cover;
+}
+
+.chart_netcdf_card {
+    background: url("../images/cards/netCDF.jpg");
+    background-size: cover;
+}
+
+.chart_cserv_card {
+    background: url("../images/cards/ClimateSERV.jpg");
+    background-size: cover;
+}
+
+.chart_sqlite_card {
+    background: url("../images/cards/SQLite.jpg");
+    background-size: cover;
+}
+
+.update_datamodel_card {
+    background: url("../images/cards/EnterData.jpg");
+    background-size: cover;
 }
