--- a/templates/WebApp/app_base.html
+++ b/templates/WebApp/app_base.html
@@ -19,6 +19,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <link href="{% static '/css/basic.css' %}" rel="stylesheet">
     <link href="{% static '/css/base.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static '/css/common.css' %}" rel="stylesheet" type="text/css">
+
     {% block script %}{% endblock %}
 </head>
 <body id="page-top">
