--- a/templates/WebApp/chart_from_SQLite.html
+++ b/templates/WebApp/chart_from_SQLite.html
@@ -12,18 +12,18 @@
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <!-- Custom styles-->
     <script src="{% static '/js/ajax_calls.js' %}"></script>
+    <link rel="stylesheet" src="{% static '/css/chart_sqlite.css' %}">
 
 {% endblock %}
 
 {% block content %}
-    <div class="container-fluid" style="background: #e1e3e5">
+    <div class="container-fluid bg-gray-300">
         <div class="row d-flex justify-content-center mt-5">
-            <!-- Area Chart -->
             <div class="col-xl-12 col-lg-12">
 
                 <div class="card shadow mb-4">
 
-                    <!-- Card Header - Dropdown -->
+                    <!-- Card Header -->
                     <div
                             class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                         <h6 class="m-0 font-weight-bold text-primary">Chart</h6>
@@ -47,17 +47,17 @@
                 </div>
             </div>
             <div class="col">
-                        <button type="button" class="btn btn-info" data-bs-toggle="modal"
-                data-bs-target="#sqliteModal">
-            Learn how to modify this page
-        </button>
+                <button type="button" class="btn btn-info" data-bs-toggle="modal"
+                        data-bs-target="#sqliteModal">
+                    Learn how to modify this page
+                </button>
             </div>
         </div>
-    <br>
+        <br>
 
     </div>
 
     <script src="{% static '/js/chart_from_SQLite.js' %}"></script>
-        {% include 'WebApp/sqlite_about.html' %}
+    {% include 'WebApp/sqlite_about.html' %}
 
 {% endblock %}
